loesungen/04-k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /container-schulung
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
